[gd_scene load_steps=10 format=3 uid="uid://b7jc3dkiebhto"]

[ext_resource type="Texture2D" uid="uid://4ygbxqng4sow" path="res://assets/Textures/Player/player_sprite.png" id="1_jcxug"]
[ext_resource type="Script" path="res://Player/player.gd" id="1_sauk5"]
[ext_resource type="PackedScene" uid="uid://dmjfi6w72raga" path="res://HitAndHurt/HurtBox/hurt_box.tscn" id="3_lntb1"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_eo18p"]
radius = 4.0
height = 22.0

[sub_resource type="Animation" id="Animation_fdaig"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_088ip"]
resource_name = "walk"
length = 0.3
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2ptst"]
_data = {
"RESET": SubResource("Animation_fdaig"),
"walk": SubResource("Animation_088ip")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_720dc"]
size = Vector2(10, 20)

[sub_resource type="CircleShape2D" id="CircleShape2D_vi1me"]
radius = 335.001

[node name="Player" type="CharacterBody2D" groups=["player"]]
motion_mode = 1
script = ExtResource("1_sauk5")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_jcxug")
hframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, 3)
shape = SubResource("CapsuleShape2D_eo18p")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_2ptst")
}

[node name="HurtBox" parent="." instance=ExtResource("3_lntb1")]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2(2, 3)
shape = SubResource("RectangleShape2D_720dc")

[node name="Attack" type="Node2D" parent="."]

[node name="IceSpearTimer" type="Timer" parent="Attack"]
unique_name_in_owner = true
wait_time = 1.5

[node name="IceSpearAttackTimer" type="Timer" parent="Attack/IceSpearTimer"]
unique_name_in_owner = true
wait_time = 0.075

[node name="TornadoTimer" type="Timer" parent="Attack"]
wait_time = 3.0

[node name="TornadoAttackTimer" type="Timer" parent="Attack/TornadoTimer"]
wait_time = 0.2

[node name="EnemyDetectionArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetectionArea"]
shape = SubResource("CircleShape2D_vi1me")
debug_color = Color(0.955761, 0.190927, 0.237393, 0.42)

[connection signal="hurt" from="HurtBox" to="." method="_on_hurt_box_hurt"]
[connection signal="timeout" from="Attack/IceSpearTimer" to="." method="_on_ice_spear_timer_timeout"]
[connection signal="timeout" from="Attack/IceSpearTimer/IceSpearAttackTimer" to="." method="_on_ice_spear_attack_timer_timeout"]
[connection signal="timeout" from="Attack/TornadoTimer" to="." method="_on_tornado_timer_timeout"]
[connection signal="timeout" from="Attack/TornadoTimer/TornadoAttackTimer" to="." method="_on_tornado_attack_timer_timeout"]
[connection signal="body_entered" from="EnemyDetectionArea" to="." method="_on_enemy_detection_area_body_entered"]
[connection signal="body_exited" from="EnemyDetectionArea" to="." method="_on_enemy_detection_area_body_exited"]

[editable path="HurtBox"]
